RESOLVED FIXED 285364
[WebGPUSwift] errorFunctions rewrite in swift
https://bugs.webkit.org/show_bug.cgi?id=285364
Summary [WebGPUSwift] errorFunctions rewrite in swift
Nitin Mahendru
Reported 2025-01-03 14:09:00 PST
[WebGPUSwift] CommandEncoder::errorFunctions rewrite in swift
Attachments
Radar WebKit Bug Importer
Comment 1 2025-01-03 14:09:11 PST
EWS
Comment 2 2025-02-07 09:25:41 PST
Committed 290014@main (02eb7bca92bb): <https://commits.webkit.org/290014@main> Reviewed commits have been landed. Closing PR #40128 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.