[WebGPUSwift] errorFunctions rewrite in swift rdar://142331124 https://bugs.webkit.org/show_bug.cgi?id=285364

Reviewed by Mike Wyrzykowski.

It's a 1-to-1 replacement.

* Source/WebGPU/WebGPU/CommandEncoder.h:
* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::copyBufferToTexture):
(WebGPU::CommandEncoder::copyTextureToBuffer):
* Source/WebGPU/WebGPU/CommandEncoder.swift:
(WebGPU.errorValidatingCopyBufferToBuffer(_:sourceOffset:destination:destinationOffset:size:)):
(WebGPU.areCopyCompatible(_:format2:)):
(WebGPU.errorValidatingCopyTextureToTexture(_:destination:copySize:)):
(WebGPU.errorValidatingCopyTextureToBuffer(_:destination:copySize:)):
(WebGPU.errorValidatingImageCopyBuffer(_:)):
(WebGPU.errorValidatingCopyBufferToTexture(_:destination:copySize:)):
(WebGPU.errorValidatingRenderPassDescriptor(_:)):
(WebGPU.errorValidatingTimestampWrites(_:)):
(WebGPU.errorValidatingComputePassDescriptor(_:)):
(WebGPU.beginRenderPass(_:)):
(WebGPU.copyBufferToBuffer(_:sourceOffset:destination:destinationOffset:size:)):
(WebGPU.copyTextureToBuffer(_:destination:copySize:)):
(WebGPU.copyBufferToTexture(_:destination:copySize:)):
(WebGPU.copyTextureToTexture(_:destination:copySize:)):
(WebGPU.errorValidatingTimestampWrites(_:commandEncoder:)): Deleted.
* Source/WebGPU/WebGPU/Internal/WebGPUSwiftInternal.h:
(isValidToUseWithBufferCommandEncoder):
(isValidToUseWithTextureCommandEncoder):
(areBuffersEqual):

Canonical link: https://commits.webkit.org/290014@main