Source/WebGPU/WebGPU/CommandEncoder.h
@@ -132,21 +132,19 @@ private:
     CommandEncoder(id<MTLCommandBuffer>, Device&, uint64_t uniqueId);
     CommandEncoder(Device&);
 
-private PUBLIC_IN_WEBGPU_SWIFT:
-    NSString* errorValidatingCopyBufferToBuffer(const Buffer& source, uint64_t sourceOffset, const Buffer& destination, uint64_t destinationOffset, uint64_t size);
-private:
     NSString* validateFinishError() const;
     bool validatePopDebugGroup() const;
-private PUBLIC_IN_WEBGPU_SWIFT:
+#if !ENABLE(WEBGPU_SWIFT)
+    NSString* errorValidatingCopyBufferToBuffer(const Buffer& source, uint64_t sourceOffset, const Buffer& destination, uint64_t destinationOffset, uint64_t size);
     NSString* errorValidatingComputePassDescriptor(const WGPUComputePassDescriptor&) const;
     NSString* errorValidatingRenderPassDescriptor(const WGPURenderPassDescriptor&) const;
-    void clearTextureIfNeeded(const WGPUImageCopyTexture&, NSUInteger);
-private:
     NSString* errorValidatingImageCopyBuffer(const WGPUImageCopyBuffer&) const;
-private PUBLIC_IN_WEBGPU_SWIFT:
     NSString* errorValidatingCopyBufferToTexture(const WGPUImageCopyBuffer&, const WGPUImageCopyTexture&, const WGPUExtent3D&) const;
     NSString* errorValidatingCopyTextureToBuffer(const WGPUImageCopyTexture&, const WGPUImageCopyBuffer&, const WGPUExtent3D&) const;
     NSString* errorValidatingCopyTextureToTexture(const WGPUImageCopyTexture& source, const WGPUImageCopyTexture& destination, const WGPUExtent3D& copySize) const;
+#endif
+private PUBLIC_IN_WEBGPU_SWIFT:
+    void clearTextureIfNeeded(const WGPUImageCopyTexture&, NSUInteger);
 private:
     void discardCommandBuffer();
 
